// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar component should Exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Brand": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "Burger": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "Container": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "div",
      "position": "start",
    },
    "render": [Function],
  },
  "Divider": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "Dropdown": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "span",
      "boxed": false,
      "right": false,
    },
    "render": [Function],
  },
  "Item": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "active": false,
      "as": "a",
      "dropdown": false,
      "dropdownUp": false,
      "hoverable": false,
    },
    "render": [Function],
  },
  "Link": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "span",
    },
    "render": [Function],
  },
  "Menu": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "defaultProps": Object {
    "as": "nav",
  },
  "render": [Function],
}
`;

exports[`Navbar component should be fixed on top 1`] = `
<nav
  className="navbar is-fixed-top"
  role="navigation"
/>
`;

exports[`Navbar component should concat Bulma class with classes in props 1`] = `
<nav
  className="navbar other-class test"
  role="navigation"
/>
`;

exports[`Navbar component should have Navbar classname 1`] = `
<nav
  className="navbar"
  role="navigation"
>
  <div
    className="navbar-brand"
  >
    <a
      className="navbar-item"
      href="#"
    >
      <img
        alt=""
        src="/"
      />
    </a>
    <div
      className="navbar-burger trigger-menu"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "outline": "none",
        }
      }
      tabIndex={0}
    >
      <span />
      <span />
      <span />
    </div>
  </div>
  <div>
    TEST
  </div>
  <div
    className="navbar-menu"
  >
    <div
      className="navbar-start"
    >
      <span
        className="navbar-item has-dropdown is-hoverable"
      >
        <span
          className="navbar-link"
        >
          Docs
        </span>
        <span
          className="navbar-dropdown is-boxed"
        >
          <a
            className="navbar-item"
            href="#"
          >
            Home
          </a>
          <div
            className="navbar-divider"
          />
          <a
            className="navbar-item"
            href="#"
          >
            Home
          </a>
        </span>
      </span>
    </div>
  </div>
</nav>
`;

exports[`Navbar component should have custom inline styles 1`] = `
<nav
  className="navbar"
  role="navigation"
  style={
    Object {
      "width": 200,
      "zIndex": 1,
    }
  }
/>
`;

exports[`Navbar component should render as an html section 1`] = `
<section
  className="navbar"
  role="navigation"
/>
`;

exports[`Navbar component should render on server side 1`] = `"<nav role=\\"navigation\\" class=\\"navbar is-fixed-top\\"></nav>"`;

exports[`Navbar component should render on server side: top 1`] = `"has-navbar-fixed-top"`;
